<resources>
    <string name="app_name">KFL</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="select_team">Selections</string>
    <string name="refreshArticles">Refresh Articles</string>
    <string name="username">Username:</string>
    <string name="usernameHint">Enter Username</string>
    <string name="email">Email:</string>
    <string name="emailHint">Enter Email</string>
    <string name="password">Password:</string>
    <string name="passwordHint">Enter Password</string>
    <string name="actionSubmit">Submit</string>
    <string name="loginBlurb">Login to enable team selections whilst on the go</string>
    <string name="navLogin">Login</string>
    <string name="loggingIn">Logging In</string>
    <string name="noInputData">Please ensure all fields have been filled</string>
    <string name="loginError">There was an error logging you in, please check your login details and try again.</string>
    <string name="navLogout">Logout</string>
    <string name="navRounds">View Round</string>
    <string name="navMyTeam">My Roster</string>
    <string name="navSelectTeam">Select Team</string>
    <string name="navSelectReserves">Select Reserves</string>
    <string name="loggedOut">Successfully Logged Out</string>
    <string name="welcomeBackUser">Welcome back %1$s!</string>
    <string name="welcomeUser">Welcome %1$s, you\'re logged in.</string>
    <string name="loading">Loading</string>
    <string name="articleActivityName">Article</string>
    <string name="loginActivityName">Login</string>
    <string name="rosterActivityName">My Roster</string>
    <string name="loggedOutFailed">Log out failed, please try again.</string>
    <string name="loggedOutUnauthorised">Unable to log out as your not logged in, or are using a token that is no longer valid. Please log in again.</string>
    <string name="selectionActivityName">Selected Players</string>
    <string name="editSelections">Edit Selections</string>
    <string name="actionSelectionsEdit">Edit Selections</string>
    <string name="playerTeamImage">Player\'s AFL Team</string>
    <string name="ruckPosition">Ruck</string>
    <string name="tacklerPosition">Tackler</string>
    <string name="markerPosition">Marker</string>
    <string name="forwardPosition">Forward</string>
    <string name="midPosition">Midfielder</string>
    <string name="flexPosition">Flex</string>
    <string name="noAPI">There was an error with your user details. You need to login again to access this activity</string>
    <string name="selectionEditActivityName">Edit Selections</string>
    <string name="editSelectionsInstructions">Update your starting positions below</string>
    <string name="selectionNoneWarn">You must select a player for all positions</string>
    <string name="editSelectionsSuccess">Your selections have been successfully updated.</string>
    <string name="clickToViewArticle">View on KFL.com.au</string>
    <string name="gotLatestRoster">Retrieved your latest team roster</string>
</resources>
