<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.danielcswain.kfl.LoginActivity">

    <TextView
        android:id="@+id/loginBlurb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginBlurb"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        />

    <TextView
        android:id="@+id/usernameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:layout_below="@id/loginBlurb"
        android:layout_marginTop="32dp"
        />

    <EditText
        android:id="@+id/usernameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/usernameText"
        android:layout_toRightOf="@id/usernameText"
        android:hint="@string/usernameHint"
        />

    <TextView
        android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_below="@id/usernameText"
        android:layout_marginTop="32dp"
        />

    <EditText
        android:id="@+id/emailField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/emailText"
        android:layout_toRightOf="@id/emailText"
        android:layout_alignLeft="@id/usernameField"
        android:hint="@string/emailHint"
        />

    <TextView
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_below="@id/emailText"
        android:layout_marginTop="32dp"
        />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/passwordText"
        android:layout_toRightOf="@id/passwordText"
        android:layout_alignLeft="@id/usernameField"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/loginSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/passwordField"
        android:layout_marginTop="32dp"
        android:text="@string/actionSubmit"

        />

</RelativeLayout>
